--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,13 @@
 <ion-menu [content]="content">
     <ion-header >
       <ion-toolbar>
-        <ion-title>Sebastien Dubos</ion-title>
+        <ion-item>
+          <ion-avatar item-start>
+              <img src="assets/imgs/defaultUser.png">
+            </ion-avatar>
+            <ion-title>Sebastien Dubos</ion-title>
+          </ion-item>
+      
       </ion-toolbar>
     </ion-header>
   
