--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,8 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  header:    #30bcd4,
-  card:      #d9eaf1,
+  header:    #2e3f75,
+  card:      #f1eaf1,
 );
 
 
